--- a/app/src/main/res/layout/fragment_range_question.xml
+++ b/app/src/main/res/layout/fragment_range_question.xml
@@ -41,6 +41,7 @@
                 style="@style/DefaultBody"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:imeOptions="actionDone"
                 android:inputType="number" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -61,6 +62,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 style="@style/DefaultBody"
                 android:layout_width="match_parent"
+                android:imeOptions="actionDone"
                 android:layout_height="wrap_content"
                 android:inputType="number" />
 
